<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_image"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/movie_name"
            android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/movie_type"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/movie_year"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>